<resources>
    <string name="app_name">Budget Buddy</string>

    <string name="title_summary">Spending</string>
    <string name="title_camera">Take Photo</string>
    <string name="title_history">History</string>

    <string name="category_1">Food</string>
    <string name="category_2">Transport</string>
    <string name="category_3">Entertainment</string>
    <string name="category_4">Shopping</string>
    <string name="category_5">Personal Care</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--<string name="category_food">"Food"</string>-->
    <!--<string name="category_food">"Food"</string>-->
</resources>
